# GuavaLang

./: .gitignore  CMakeLists.txt  README.md
antlr4cpp-runtime/: CMakeLists.txt
guava/: CMakeLists.txt  GenerateParser.cmake  GuavaLexer.g4  GuavaParser.g4
guava/cpp/: generated-include.h  guava-common.h  guava-statics.h  guava-types.h  main.cpp
guava/cpp/error/: error-common.h
guava/cpp/guavabytes/: GuavaByteCode.cpp  GuavaByteCode.h  IGuavaByteInstruction.h
guava/cpp/intermediate-representation/: TypeDeclaration.h
guava/cpp/parsers/: GuavaFileVisitor.cpp  GuavaFileVisitor.h  GuavaPredicateParser.cpp  GuavaPredicateParser.h  GuavaScriptVisitor.cpp  GuavaScriptVisitor.h  GuavaStatementVisitor.cpp  GuavaStatementVisitor.h  IBytecodeBuilder.h  generated-common.h  parser-common.h  parser-util.h
guava/cpp/parsers/ast/: GuavaAny.h  IAstNode.h  Script.h  ast-common.h
guava/cpp/parsers/ast/assignment/: DeclarativeAssignment.h  IAssignment.h  InlineFunctionAssingment.h  assignment-export.h
guava/cpp/parsers/ast/declaration/: IDeclaration.h
guava/cpp/parsers/ast/expressions/: IExpression.h  expression-export.h
guava/cpp/parsers/ast/expressions/identifiers/: DefaultIdentifier.h  IIdentifier.h  RuntimeTemplatedIdentifier.h  SimpleIdentifier.h  TemplatedIdentifier.h  TupleIdentifier.h
guava/cpp/parsers/ast/expressions/lambda/: Lambda.h
guava/cpp/parsers/ast/expressions/misc-terms/: TupleExpression.h
guava/cpp/parsers/ast/expressions/operations/: IOperation.h
guava/cpp/parsers/ast/matrix/: ExpressionTupleAndMatrix.h  StatementTupleAndMatrix.h  TMatrix.h  TTuple.h  matrix-export.h
guava/cpp/parsers/ast/parameters/: Parameter.h  Parameters.h
guava/cpp/parsers/ast/sentence/: ISentence.h
guava/cpp/parsers/ast/special-assignment/: ISpecialAssignment.h  MultiAssignment.h  special-assignment-export.h
guava/cpp/parsers/ast/statement/: BodyStatement.h  BodyStatementFollowUp.h  IStatement.h  ScopeStatement.h
guava/cpp/parsers/templates/: AnyTemplate.h  Function.cpp  Function.h  IAstTemplate.h  IDeclaration.h  IStatement.h  IType.h  Parameter.cpp  Script.h  templates-common.h
guava/cpp/parsers/templates/assignment/: DeclarativeAssignment.h  IAssignment.h  InlineFunctionAssingment.h  Reassignment.h
guava/cpp/parsers/templates/declaration/: Function.h  IDeclaration.h  declaration-export.h
guava/cpp/parsers/templates/expressions/: IExpression.h  expression-export.h
guava/cpp/parsers/templates/expressions/identifiers/: DefaultIdentifier.h  NestedIdentifier.h  RuntimeTemplatedIdentifier.h  SimpleIdentifier.h  TemplatedIdentifier.h  TupleIdentifier.h
guava/cpp/parsers/templates/follow-up/: BodyStatementFollowUp.h
guava/cpp/parsers/templates/matrix/: TMatrix.h  TTuple.h
guava/cpp/parsers/templates/parameters/: Parameter.h  Parameters.h  parameter-export.h
guava/cpp/parsers/templates/scentence/: CompoundScentence.h  IScentence.h  scentence-export.h
guava/cpp/parsers/templates/sentence/: CompoundSentence.h  ISentence.h  sentence-export.h
guava/cpp/parsers/templates/special-assignment/: ISpecialAssignment.h  MultiAssignment.h
guava/cpp/parsers/templates/statement/: BodyStatement.h  BodyStatementFollowUp.h  IStatement.h  KeywordStatement.h  ScopeStatement.h  statement-export.h
guava/cpp/types/: BaseOperatorProvider.h  BaseType.h  BatchOperatorProvider.h  ByteDataProvider.h  IDataProvider.h  IGuavaType.h  IOperatorProvider.h  IPrimitive.h  IPropertyProvider.h  IType.h  ITypeMember.h  IVariable.h  Instance.h  TemplateDataProvider.h  TemplateOperatorProvider.h  Type.h
guava/cpp/util/: StringUtility.cpp  StringUtility.h  string-utility.cpp  string-utility.h  util-common.h  vec-util.h
guava/cpp/util/dynamic-library-loader/: IDynamicLinker.h  Library.h  MacDynamicLinker.h  WindowsDynamicLinker.cpp  WindowsDynamicLinker.h  dynamic-linker-export.h
guava/grammar/: CommonLexer.g4  CommonLexer.tokens  GeneralLexer.g4  GeneralLexer.tokens  GuavaLexer.g4  GuavaParser.g4  StatementLexer.g4  StatementLexer.tokens  StatementParser.g4
guava/scripts/: LexerLiteralsInParser.pl
guava/test/: guava-test-common.h
guava/test/double_type_test/: main.cpp
guava/test/dynamic_link_test/: main.cpp
guava/test/dynamic_link_test/shared/: overloaded_link_shared.h
guava/test/guava/: test.guava
test/: test.guava
(+20 files in other folders)
